--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_install:
   - chmod a+x .travis/oracle/*.sh
   - .travis/oracle/download.sh
   - .travis/oracle/install.sh
-  - echo exit | sqlplus / as sysdba @.travis/oracle/createschema.sql
+  - echo exit | "$ORACLE_HOME/bin/sqlplus" -L -S / AS SYSDBA @.travis/oracle/createschema.sql
