--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ before_install:
   - chmod a+x .travis/oracle/*.sh
   - .travis/oracle/download.sh
   - .travis/oracle/install.sh
+  - .travis/oracle/mvn-ojdbc.sh
   - echo exit | "$ORACLE_HOME/bin/sqlplus" -L -S / AS SYSDBA @.travis/oracle/createschema.sql
