--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>io.github.codemumbler.maven.plugin</groupId>
 	<artifactId>mdbconverter</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>1.2</version>
+	<version>1.3-SNAPSHOT</version>
 	<name>mdbconverter Maven Mojo</name>
 	<description>
 		A Maven plugin to write MS Access (mdb/accdb) files to Oracle SQL scripts.
@@ -29,7 +29,7 @@
 		<connection>scm:git:https://github.com/codemumbler/mdboracle-maven-plugin.git</connection>
 		<developerConnection>scm:git:https://github.com/codemumbler/mdboracle-maven-plugin.git</developerConnection>
 		<url>https://github.com/codemumbler/mdboracle-maven-plugin.git</url>
-    <tag>mdbconverter-1.2</tag>
+    <tag>HEAD</tag>
   </scm>
 	<distributionManagement>
 		<snapshotRepository>
